syntax = "proto3";

package martiancloud.tharsis.api.service_account;

option go_package = "gitlab.com/infor-cloud/martian-cloud/tharsis/tharsis-api/pkg/protos/gen";

import "metadata.proto";
import "pagination.proto";
import "google/protobuf/empty.proto";

// ServiceAccounts implements all functionality related to a Tharsis ServiceAccount.
service ServiceAccounts {
  // GetServiceAccountByID returns a ServiceAccount by an ID.
  rpc GetServiceAccountByID(GetServiceAccountByIDRequest) returns (ServiceAccount);
  // GetServiceAccounts returns a paginated list of ServiceAccounts.
  rpc GetServiceAccounts(GetServiceAccountsRequest) returns (GetServiceAccountsResponse);
  // CreateServiceAccount creates a new ServiceAccount.
  rpc CreateServiceAccount(CreateServiceAccountRequest) returns (ServiceAccount);
  // UpdateServiceAccount returns the updated ServiceAccount.
  rpc UpdateServiceAccount(UpdateServiceAccountRequest) returns (ServiceAccount);
  // DeleteServiceAccount deletes a ServiceAccount.
  rpc DeleteServiceAccount(DeleteServiceAccountRequest) returns (google.protobuf.Empty);
  // CreateToken creates a token for a ServiceAccount.
  rpc CreateToken(CreateTokenRequest) returns (CreateTokenResponse);
}

// ServiceAccountSortableField defines enums that allow sorting a paginated list of
// ServiceAccounts.
enum ServiceAccountSortableField {
  CREATED_AT_ASC   = 0;
  CREATED_AT_DESC  = 1;
  UPDATED_AT_ASC   = 2;
  UPDATED_AT_DESC  = 3;
  GROUP_LEVEL_ASC  = 4;
  GROUP_LEVEL_DESC = 5;
}

// BoundClaimsType defines the type of comparison for bound claims.
enum BoundClaimsType {
  STRING = 0;
  GLOB   = 1;
}

// GetServiceAccountByIDRequest is the input for retrieving a ServiceAccount by its ID.
message GetServiceAccountByIDRequest {
  string id = 1;
}

// GetServiceAccountsRequest is the input for retrieving a paginated list of ServiceAccounts.
message GetServiceAccountsRequest {
  optional pagination.PaginationOptions pagination_options = 1;
  optional ServiceAccountSortableField  sort               = 2;
  optional string                       search             = 3;
  string                                namespace_path     = 4;
  optional string                       runner_id          = 5;
  bool                                  include_inherited  = 6;
}

// CreateServiceAccountRequest is the input for creating a new ServiceAccount.
message CreateServiceAccountRequest {
  string                   name                = 1;
  string                   description         = 2;
  string                   group_id            = 3;
  repeated OIDCTrustPolicy oidc_trust_policies = 4;
}

// UpdateServiceAccountRequest is the input for updating a ServiceAccount.
message UpdateServiceAccountRequest {
  string                   id                  = 1;
  optional string          description         = 2;
  optional int64           version             = 3;
  repeated OIDCTrustPolicy oidc_trust_policies = 4;
}

// DeleteServiceAccountRequest is the input for deleting a ServiceAccount.
message DeleteServiceAccountRequest {
  string         id      = 1;
  optional int64 version = 2;
}

// CreateTokenRequest is the input for creating a service account token.
message CreateTokenRequest {
  string service_account_id = 1;
  string token              = 2;
}

// OIDCTrustPolicy represents an OIDC trust policy.
message OIDCTrustPolicy {
  string                   issuer            = 1;
  optional BoundClaimsType bound_claims_type = 2;
  map<string, string>      bound_claims      = 3;
}

// ServiceAccount defines a service account within Tharsis.
message ServiceAccount {
  metadata.ResourceMetadata metadata            = 1;
  string                    name                = 2;
  string                    description         = 3;
  string                    group_id            = 4;
  string                    created_by          = 5;
  repeated OIDCTrustPolicy  oidc_trust_policies = 6;
}

// CreateTokenResponse is the response for creating a service account token.
message CreateTokenResponse {
  string token      = 1;
  int32  expires_in = 2;
}

// GetServiceAccountsResponse is the paginated list of ServiceAccounts.
message GetServiceAccountsResponse {
  repeated ServiceAccount service_accounts = 1;
  pagination.PageInfo     page_info        = 2;
}
